DeploymentStaging/deployPackage/objects/Work_Order_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Text__c</fullName>
        <description>List of names of assigned tradesman, populated by trigger on work_Order_Activity_Assignment__c object</description>
        <label>Assigned To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assignment_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Assignment Rule</label>
        <referenceTo>Work_Order_Activity_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_Text__c</fullName>
        <description>Detailed Description of Cause of Damage to Equipment Part</description>
        <inlineHelpText>Detailed Description of Cause of Damage to Equipment Part</inlineHelpText>
        <label>Cause Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cause of Damage to Equipment Part</description>
        <inlineHelpText>Cause of Damage to Equipment Part</inlineHelpText>
        <label>Cause</label>
        <referenceTo>HOG_Cause__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daily_Logs__c</fullName>
        <label>Daily Logs</label>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Damage_Text__c</fullName>
        <description>Detailed description of Damage to Equipment Part</description>
        <inlineHelpText>Detailed description of Damage to Equipment Part</inlineHelpText>
        <label>Damage Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Damage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Damage</label>
        <referenceTo>HOG_Damage__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Equipment__c</fullName>
        <formula>BLANKVALUE( 
Equipment__r.Description_of_Equipment__c, 
Maintenance_Work_Order__r.Equipment__r.Description_of_Equipment__c 
)</formula>
        <label>Description of Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_units__c</fullName>
        <label>Duration units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <summarizedField>Work_Order_Activity_Log__c.Finished_New__c</summarizedField>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Description_SAP__c</fullName>
        <description>&quot;Smar Location&quot; - Show functional location description from Activity level, if it is null - show functional location description from Work Order</description>
        <formula>BLANKVALUE( 
 Location__r.Name, 
 BLANKVALUE(Maintenance_Work_Order__r.Location__r.Name,
  BLANKVALUE(Maintenance_Work_Order__r.Facility__r.Name, Maintenance_Work_Order__r.Functional_Location_Description_SAP__c)
  )
)</formula>
        <label>Functional Location Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <description>&quot;Smart Location Name&quot; - show activity location name if specified, otherwise show Work Order Location name</description>
        <formula>BLANKVALUE( Location__r.Name ,  Maintenance_Work_Order__r.Location__r.Name )</formula>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Work_Order__c</fullName>
        <label>Maintenance Work Order</label>
        <referenceTo>HOG_Maintenance_Servicing_Form__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_assigned_people__c</fullName>
        <label>Number of assigned people</label>
        <summaryFilterItems>
            <field>Work_Order_Activity_Assignment__c.Rejected__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Work_Order_Activity_Assignment__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_people__c</fullName>
        <label>Number of people</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating District</label>
        <referenceTo>Operating_District__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operating_Field_AMU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating Field (AMU)</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Number__c</fullName>
        <label>Operation Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Key__c</fullName>
        <label>Part Key</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Equipment Part Repaired</description>
        <inlineHelpText>Equipment Part Repaired</inlineHelpText>
        <label>Part</label>
        <referenceTo>HOG_Part__c</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Assigned__c</fullName>
        <description>Count of people assigned to this activity in SAP</description>
        <label>SAP Assigned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Deleted__c</fullName>
        <formula>BEGINS( System_Status__c , &quot;DLT&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Finish_Date__c</fullName>
        <label>Scheduled Finish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Start_Date__c</fullName>
        <label>Scheduled Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Started</label>
        <summarizedField>Work_Order_Activity_Log__c.Started_New__c</summarizedField>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Waiting on parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulled off activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started at Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished at Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished for the day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Operation_Number__c</fullName>
        <label>Sub Operation Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Condition__c</fullName>
        <label>System Condition</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Off_Equipment_Text__c</fullName>
        <formula>IF(ISNULL(Travel_Time__c ), &quot;&quot;,

IF(FLOOR(Travel_Time__c)=0, &quot;&quot;,
TEXT(
FLOOR(Travel_Time__c)
) &amp;&quot; Hours &quot;)

&amp;

IF(ROUND(MOD((Travel_Time__c)*60,60),0)=0, &quot;&quot;,
TEXT(
ROUND(MOD((Travel_Time__c)*60,60),0)
) &amp;&quot; Minutes &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Off Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_On_Equipment_Text__c</fullName>
        <formula>IF(ISNULL(Work_Time__c ), &quot;&quot;,

IF(FLOOR(Work_Time__c)=0, &quot;&quot;,
TEXT(
FLOOR(Work_Time__c)
) &amp;&quot; Hours &quot;)

&amp;

IF(ROUND(MOD((Work_Time__c )*60,60),0)=0, &quot;&quot;,
TEXT(
ROUND(MOD((Work_Time__c )*60,60),0)
) &amp;&quot; Minutes &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent On Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Man_Hours_Text__c</fullName>
        <formula>IF(ISNULL(Work_Time__c + Travel_Time__c ), &quot;&quot;,

IF(FLOOR(Work_Time__c+ Travel_Time__c)=0, &quot;&quot;,
TEXT(
FLOOR(Work_Time__c + Travel_Time__c)
) &amp;&quot; Hours &quot;)

&amp;

IF(ROUND(MOD((Work_Time__c + Travel_Time__c )*60,60),0)=0, &quot;&quot;,
TEXT(
ROUND(MOD((Work_Time__c + Travel_Time__c )*60,60),0)
) &amp;&quot; Minutes &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Man Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Man_Hours__c</fullName>
        <label>Total Man Hours (Hrs)</label>
        <summarizedField>Work_Order_Activity_Log__c.Total_Man_Hours__c</summarizedField>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Travel_Time__c</fullName>
        <label>Time Spent Off Equipment (hrs)</label>
        <summarizedField>Work_Order_Activity_Log__c.TravelTime_New__c</summarizedField>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unloading_Point__c</fullName>
        <label>Unloading Point</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <label>User Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Activities</relationshipLabel>
        <relationshipName>Work_Order_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <label>Work Center</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Details__c</fullName>
        <label>Work Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Time__c</fullName>
        <label>Time Spent On Equipment (hrs)</label>
        <summarizedField>Work_Order_Activity_Log__c.WorkTime_New__c</summarizedField>
        <summaryForeignKey>Work_Order_Activity_Log__c.Work_Order_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <label>Work</label>
        <precision>8</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_units__c</fullName>
        <label>Work Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>source_system_id__c</fullName>
        <description>SAP ID to hock up integration</description>
        <externalId>true</externalId>
        <label>source system id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Work Order Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Maintenance_Work_Order__c</columns>
        <columns>Completed__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>